--- a/app/src/main/res/drawable/item_bg.xml
+++ b/app/src/main/res/drawable/item_bg.xml
@@ -7,7 +7,7 @@
             <solid android:color="#ffffff"/>
             <stroke
                 android:width="1px"
-                android:color="#000000"/>
+                android:color="#eeeeee"/>
         </shape>
     </item>
 </layer-list>
