--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -73,11 +73,11 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/type_1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
-        android:orientation="vertical"
-        android:visibility="gone">
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="wrap_content"
@@ -99,8 +99,10 @@
     </LinearLayout>
 
     <RelativeLayout
+        android:id="@+id/type_2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:visibility="gone">
 
         <View
             android:layout_width="match_parent"
@@ -154,24 +156,28 @@
                 android:textStyle="bold"/>
 
             <LinearLayout
+                android:id="@+id/search_linear_history"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
+                android:layout_height="match_parent"
+                android:background="@drawable/item_up_down_bg"
+                android:orientation="vertical">
             </LinearLayout>
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="140dp"
-                android:padding="40dp"
                 android:background="@color/white"
-                android:gravity="center">
+                android:gravity="center"
+                android:padding="40dp">
 
                 <LinearLayout
+                    android:id="@+id/search_clean_button"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
+                    android:background="@drawable/clean_search_button_bg_selector"
+                    android:clickable="true"
                     android:gravity="center"
-                    android:orientation="horizontal"
-                    android:background="@drawable/clean_search_button_bg_selector">
+                    android:orientation="horizontal">
 
                     <ImageView
                         android:layout_width="16dp"
