搜索列表完成,获取主分支搜索接口[3]

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,5 @@
     <dimen name="dp_180">180dp</dimen>
     <dimen name="dp_220">220dp</dimen>
     <dimen name="dp_2">2dp</dimen>
+    <dimen name="dp_14">14dp</dimen>
 </resources>
