--- a/app/src/main/res/layout/activity_type_list.xml
+++ b/app/src/main/res/layout/activity_type_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.young.jdmall.ui.widget.TypeListView
+<com.young.jdmall.ui.view.HideHeadView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -65,4 +65,4 @@
     </LinearLayout>
 
 
-</com.young.jdmall.ui.widget.TypeListView>
+</com.young.jdmall.ui.view.HideHeadView>
