--- a/app/src/main/res/layout/activity_type_list.xml
+++ b/app/src/main/res/layout/activity_type_list.xml
@@ -2,6 +2,7 @@
 <com.young.jdmall.ui.view.HideHeadView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:id="@+id/hh_view"
     android:layout_height="match_parent">
 
     <com.young.jdmall.ui.widget.ViewTypeHeader
