--- a/app/src/main/res/layout/activity_add_edit_receipt_address.xml
+++ b/app/src/main/res/layout/activity_add_edit_receipt_address.xml
@@ -3,29 +3,31 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
-
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/item_bar_bg"
-        android:padding="14dp">
+        android:layout_height="45dp"
+        android:background="@drawable/action_bar_bg">
 
         <ImageView
             android:id="@+id/iv_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="11dp"
+            android:layout_height="21dp"
             android:layout_centerVertical="true"
-            android:background="@mipmap/a_8"/>
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="25dp"
+            android:background="@drawable/agm"/>
+
 
         <TextView
             android:id="@+id/tv_title"
+
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:gravity="center"
             android:text="新建收货地址"
-            android:textColor="@android:color/black"
-            android:textSize="24sp"/>
+            android:textColor="@color/black"
+            android:textSize="17sp"/>
 
         <ImageButton
             android:id="@+id/ib_delete"
@@ -35,8 +37,9 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="10dp"
             android:background="@mipmap/l"
-            android:visibility="gone"/>
+            android:visibility="invisible"/>
     </RelativeLayout>
+
 
 
     <RelativeLayout
