--- a/app/src/main/res/layout/activity_help_center.xml
+++ b/app/src/main/res/layout/activity_help_center.xml
@@ -9,31 +9,33 @@
         android:layout_height="match_parent">
 
         <RelativeLayout
-
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/item_bar_bg"
-            android:padding="14dp">
+            android:layout_height="45dp"
+            android:background="@drawable/action_bar_bg">
 
             <ImageView
                 android:id="@+id/iv_back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="11dp"
+                android:layout_height="21dp"
                 android:layout_centerVertical="true"
-                android:background="@mipmap/a_8"/>
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="25dp"
+                android:background="@drawable/agm"/>
+
 
             <TextView
                 android:id="@+id/tv_help"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
+                android:layout_height="match_parent"
+                android:layout_centerInParent="true"
+                android:gravity="center"
                 android:text="帮助中心"
-                android:textColor="@android:color/black"
-                android:textSize="24sp"/>
+                android:textColor="@color/black"
+                android:textSize="17sp"/>
 
 
         </RelativeLayout>
+
 
         <LinearLayout
             android:orientation="vertical"
