--- a/app/src/main/res/layout/item_all_order.xml
+++ b/app/src/main/res/layout/item_all_order.xml
@@ -1,86 +1,107 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_marginTop="10dp"
               android:paddingTop="14dp"
-              android:background="#E5E5E5"
+              android:background="#fff"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
+
+
     <RelativeLayout
-        android:background="@android:color/white"
-        android:padding="12dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
         <TextView
             android:layout_centerVertical="true"
-            android:drawableLeft="@mipmap/b3j"
+            android:drawableLeft="@mipmap/a_5"
+            android:drawablePadding="8dp"
+            android:gravity="center"
+            android:textColor="#f81e201f"
+            android:text="京东自营旗舰店"
+            android:padding="4dp"
+            android:drawableRight="@mipmap/a5j"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="京东"
-            android:textColor="@android:color/black"
-            android:drawablePadding="10dp"
-            android:textSize="18sp"/>
-
+            android:layout_height="wrap_content"/>
         <ImageView
-            android:id="@+id/iv_delete"
+            android:id="@+id/iv_order_delete"
+            android:src="@mipmap/a_b"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
+            android:layout_margin="6dp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@mipmap/akw"/>
-
-
+            android:layout_height="wrap_content"/>
     </RelativeLayout>
 
     <LinearLayout
-        android:id="@+id/ll_goods"
-        android:background="#E5E5E5"
-        android:padding="10dp"
-        android:gravity="center_vertical"
+
         android:layout_width="match_parent"
-        android:layout_height="80dp">
+        android:layout_height="80dp"
+        android:background="#f4f1f1">
+
         <ImageView
-            android:id="@+id/iv_icon"
+            android:id="@+id/iv_order_pic"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:background="@mipmap/ic_launcher"/>
+            android:layout_margin="8dp"
+            android:src="@mipmap/goods2"/>
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/tv_product"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="18dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="40dp"
+                android:text="产品编号"/>
+            <TextView
+                android:id="@+id/tv_time"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="40dp"
+                android:text="时间"/>
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/tv_desc"
-            android:textColor="@android:color/black"
-            android:layout_marginLeft="20dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="描述"
-            android:ellipsize="end"
-            android:maxLines="3"/>
     </LinearLayout>
 
     <RelativeLayout
-        android:background="@android:color/white"
-        android:padding="10dp"
+
+        android:layout_marginTop="4dp"
+        android:padding="6dp"
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
-
-
         <TextView
-            android:layout_centerVertical="true"
-            android:id="@+id/tv_pay"
-            android:layout_alignParentRight="true"
+            android:id="@+id/tv_desc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="实付款：￥"
-            android:textColor="@android:color/black"/>
 
-        <TextView
-            android:id="@+id/tv_num"
-            android:layout_marginRight="10dp"
-            android:layout_centerVertical="true"
-            android:textColor="@android:color/black"
-            android:layout_toLeftOf="@id/tv_pay"
+            android:text="描述"/>
+       <TextView
+           android:id="@+id/tv_pay"
+           android:layout_alignParentRight="true"
+            android:text="实付款："
+
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="共n件商品"/>
+            android:layout_height="wrap_content"/>
     </RelativeLayout>
+    <View
+        android:background="#d8d5d5"
+        android:layout_width="match_parent"
+        android:layout_height="1px"/>
+
+    <TextView
+        android:id="@+id/again_buy"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:layout_margin="4dp"
+        android:background="@drawable/text_btn_bg"
+        android:padding="4dp"
+        android:text="再次购买"
+        android:textColor="@android:color/holo_red_dark"/>
 </LinearLayout>
