第二次世界末日重建（启动页面的恢复）

--- a/app/src/main/res/layout/splash_third.xml
+++ b/app/src/main/res/layout/splash_third.xml
@@ -12,6 +12,11 @@
         >
     </com.young.jdmall.ui.view.PreviewVideoView>
 
+    <ImageView
+        android:id="@+id/iv_splash"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
     <Button
         android:id="@+id/btn_splash_start"
         android:layout_width="wrap_content"
