第二次世界末日重建（填写订单页面的恢复）

--- a/app/src/main/res/layout/filling_order.xml
+++ b/app/src/main/res/layout/filling_order.xml
@@ -186,6 +186,7 @@
                 android:src="@mipmap/right"/>
 
             <LinearLayout
+                android:id="@+id/pay_contains"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
