解决搜索两次会炸Bug,心腹大患啊

--- a/app/src/main/res/layout/activity_type_list.xml
+++ b/app/src/main/res/layout/activity_type_list.xml
@@ -30,7 +30,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="配送"/>
+                android:text="包邮"/>
 
             <Button
                 android:id="@+id/btn_2"
